[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/nothing.png" type="Texture" id=1]
[ext_resource path="res://FontData/Title.tres" type="DynamicFont" id=2]
[ext_resource path="res://FontData/Text.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/Palette.gd" type="Script" id=4]
[ext_resource path="res://Assets/angle-left-solid.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/Neu/RobotoSlab-Medium.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/grey_sliderDown.png" type="Texture" id=7]
[ext_resource path="res://Assets/grey_sliderHorizontal.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=8]
size = 80
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxTexture" id=9]

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 190, 4 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 11 )
HSlider/icons/grabber = ExtResource( 7 )
HSlider/icons/grabber_disabled = ExtResource( 7 )
HSlider/icons/grabber_highlight = ExtResource( 7 )
HSlider/icons/tick = null
HSlider/styles/grabber_area = SubResource( 9 )
HSlider/styles/slider = SubResource( 10 )

[sub_resource type="DynamicFont" id=13]
size = 75
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=14]
size = 55
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:material:shader_param/x_pos")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:material:shader_param/y_pos")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.63 ]
}

[sub_resource type="Animation" id=4]
resource_name = "end"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.05, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:material:shader_param/x_pos")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:material:shader_param/y_pos")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "start"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.05 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:material:shader_param/x_pos")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:material:shader_param/y_pos")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode unshaded;
 
uniform float circle_size : hint_range(0.0, 1.05);
uniform float screen_width;
uniform float screen_height;
uniform float x_pos : hint_range(0.0, 1.0, 0.01);
uniform float y_pos :hint_range(0.0, 1.0, 0.01);
 
void fragment() {
	float ratio = screen_width / screen_height;
	float dist = distance(vec2(x_pos, y_pos), vec2(mix(0.5, UV.x, ratio), UV.y));
	COLOR.a = step(circle_size, dist);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/circle_size = 0.0
shader_param/screen_width = 620.0
shader_param/screen_height = 1100.0
shader_param/x_pos = 0.0
shader_param/y_pos = 0.63

[node name="Palette" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Title" type="Label" parent="."]
margin_left = 8.0
margin_top = 122.0
margin_right = 560.0
margin_bottom = 321.0
rect_rotation = -15.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Colors"
align = 1

[node name="Back" type="Control" parent="."]
anchor_left = 0.028
anchor_top = 0.028
anchor_right = 0.028
anchor_bottom = 0.042

[node name="Back" type="TouchScreenButton" parent="Back"]
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 5 )

[node name="Colors" type="Control" parent="."]
margin_right = 623.0
margin_bottom = 1101.0

[node name="Color0" type="Control" parent="Colors"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -150.5
margin_right = 175.0
margin_bottom = -50.5

[node name="Color" type="ColorRect" parent="Colors/Color0"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -50.0
margin_right = 100.0
margin_bottom = 50.0
color = Color( 0.784314, 0.137255, 0.137255, 1 )

[node name="ColorName" type="Label" parent="Colors/Color0"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -193.0
margin_top = -33.5
margin_bottom = 33.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "#c82323"

[node name="Color0Button" type="TouchScreenButton" parent="Colors/Color0"]
scale = Vector2( 3.95833, 1.60156 )
normal = ExtResource( 1 )

[node name="Color1" type="Control" parent="Colors"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = 49.5
margin_right = 175.0
margin_bottom = 149.5

[node name="Color" type="ColorRect" parent="Colors/Color1"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -50.0
margin_right = 100.0
margin_bottom = 50.0
color = Color( 0.784314, 0.137255, 0.137255, 1 )

[node name="ColorName" type="Label" parent="Colors/Color1"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -193.0
margin_top = -33.5
margin_bottom = 33.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "#c82323"

[node name="Color1Button" type="TouchScreenButton" parent="Colors/Color1"]
scale = Vector2( 3.95833, 1.60156 )
normal = ExtResource( 1 )

[node name="Color2" type="Control" parent="Colors"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = 249.5
margin_right = 175.0
margin_bottom = 349.5

[node name="Color" type="ColorRect" parent="Colors/Color2"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -50.0
margin_right = 100.0
margin_bottom = 50.0
color = Color( 0.784314, 0.137255, 0.137255, 1 )

[node name="ColorName" type="Label" parent="Colors/Color2"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -193.0
margin_top = -33.5
margin_bottom = 33.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "#c82323"

[node name="Color2Button" type="TouchScreenButton" parent="Colors/Color2"]
scale = Vector2( 3.95833, 1.60156 )
normal = ExtResource( 1 )

[node name="Import" type="Control" parent="Colors"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -101.0
margin_right = 280.0
margin_bottom = -41.0

[node name="Label" type="Label" parent="Colors/Import"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -30.0
margin_right = 71.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Import"

[node name="TouchScreenButton" type="TouchScreenButton" parent="Colors/Import"]
scale = Vector2( 1.8125, 1 )
normal = ExtResource( 1 )

[node name="Export" type="Control" parent="Colors"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -270.0
margin_top = -101.0
margin_right = -90.0
margin_bottom = -41.0

[node name="Label" type="Label" parent="Colors/Export"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -30.0
margin_right = 70.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Export"
align = 1

[node name="TouchScreenButton" type="TouchScreenButton" parent="Colors/Export"]
position = Vector2( 7, 2 )
scale = Vector2( 1.8125, 1 )
normal = ExtResource( 1 )

[node name="ChangeColor" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 329.0

[node name="Color" type="ColorRect" parent="ChangeColor"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -225.0
margin_right = 225.0
margin_bottom = 150.0
color = Color( 0.729412, 0.0901961, 0.0901961, 1 )

[node name="ColorName" type="LineEdit" parent="ChangeColor"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -207.5
margin_top = -185.5
margin_right = 207.5
margin_bottom = -79.5
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
align = 1
placeholder_text = "#a7d5g8e6"

[node name="R" type="Control" parent="ChangeColor"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -45.5
margin_right = 20.0
margin_bottom = -5.5

[node name="R" type="HSlider" parent="ChangeColor/R"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -31.0
margin_right = 30.0
margin_bottom = 11.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 12 )
min_value = 1.0
max_value = 255.0
value = 50.0

[node name="Label" type="Label" parent="ChangeColor/R"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -50.0
margin_right = -169.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "R"

[node name="G" type="Control" parent="ChangeColor"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 74.5
margin_right = 20.0
margin_bottom = 114.5

[node name="G" type="HSlider" parent="ChangeColor/G"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -31.5
margin_right = 30.0
margin_bottom = 10.5
rect_scale = Vector2( 2, 2 )
theme = SubResource( 12 )
min_value = 1.0
max_value = 255.0
value = 1.0

[node name="Label" type="Label" parent="ChangeColor/G"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -50.0
margin_right = -169.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "G"

[node name="B" type="Control" parent="ChangeColor"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 194.5
margin_right = 20.0
margin_bottom = 234.5

[node name="B" type="HSlider" parent="ChangeColor/B"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -31.5
margin_right = 30.0
margin_bottom = 10.5
rect_scale = Vector2( 2, 2 )
theme = SubResource( 12 )
min_value = 1.0
max_value = 255.0
value = 1.0

[node name="Label" type="Label" parent="ChangeColor/B"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -50.0
margin_right = -169.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "B"

[node name="SaveButton" type="Control" parent="ChangeColor"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -185.0
margin_top = -81.0
margin_right = -145.0
margin_bottom = -41.0

[node name="Label" type="Label" parent="ChangeColor/SaveButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -36.5
margin_right = 63.0
margin_bottom = 36.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "Save"

[node name="SaveButton" type="TouchScreenButton" parent="ChangeColor/SaveButton"]
position = Vector2( -53, -7 )
scale = Vector2( 1.47917, 0.984374 )
normal = ExtResource( 1 )

[node name="CancelButton" type="Control" parent="ChangeColor"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 120.0
margin_top = -81.0
margin_right = 160.0
margin_bottom = -41.0

[node name="Label" type="Label" parent="ChangeColor/CancelButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.0
margin_top = -36.5
margin_right = 89.0
margin_bottom = 36.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "Cancel"

[node name="CancelButton" type="TouchScreenButton" parent="ChangeColor/CancelButton"]
position = Vector2( -79, -15 )
scale = Vector2( 2.05208, 1.01563 )
normal = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/end = SubResource( 4 )
anims/start = SubResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
margin_bottom = 8.0
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="Back/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Colors/Color0/Color0Button" to="." method="_on_Color0Button_pressed"]
[connection signal="pressed" from="Colors/Color1/Color1Button" to="." method="_on_Color1Button_pressed"]
[connection signal="pressed" from="Colors/Color2/Color2Button" to="." method="_on_Color2Button_pressed"]
[connection signal="text_changed" from="ChangeColor/ColorName" to="." method="_on_ColorName_text_changed"]
[connection signal="value_changed" from="ChangeColor/R/R" to="." method="_on_R_value_changed"]
[connection signal="value_changed" from="ChangeColor/G/G" to="." method="_on_G_value_changed"]
[connection signal="value_changed" from="ChangeColor/B/B" to="." method="_on_B_value_changed"]
[connection signal="pressed" from="ChangeColor/SaveButton/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="ChangeColor/CancelButton/CancelButton" to="." method="_on_CancelButton_pressed"]
